# Cornel

./: .gitignore  .gitmodules  build-tests.sh  build.sh  burn.sh  clean.sh  config.ini  gdb.txt  out.txt  putty-com3.sh  test-bochs-dbg.sh  test-bochs.sh  test-machine.sh  test-qemu-dbg-wait.sh  test-qemu-dbg.sh  test-qemu.sh  test.asm  tt  ttttt
.legacy/config/: CMakeLists.txt
os99/boot-pxe/source/: CMakeLists.txt  asm.h  doshelp.c  doshelp.h  intr.h  main.c  main.cpp
os99/bootwat/asm/: CMakeLists.txt  a20line.asi  bootwat.asm  config.asi  errorid.asi  fakedos.asi  fakepsp.asi  flatreal.asi  main.asi
os99/core/kernel/: .link  CMakeLists.txt  main.cpp
the_os/: CMakeLists.txt  build.sh  clean.sh
the_os/cimpl/: CMakeLists.txt  strlen.cpp  toupper.cpp
the_os/cmake/: g++12.cmake  gxx12.cmake  i386sys.cmake  i686pm.cmake  i86rm.cmake
the_os/common/: CMakeLists.txt  assembly.hpp  bios_data_area.hpp  common.cpp  macros.hpp  pic8259.cpp  pic8259.hpp  print.cpp  print.hpp  rtccmos.cpp  utilities_mpl.hpp
the_os/config/: CMakeLists.txt  autoexec.bat  config.ini  logo.ascii  netboot32.cmd  netboot32.run
the_os/libcimpl/: CMakeLists.txt  memmove.cpp  strlen.cpp
the_os/libcimpl/source/: CMakeLists.txt
the_os/libconfig/tests/: t000_config.cpp
the_os/libformat/: CMakeLists.txt  CMakeSettings.json  format_as.hpp  format_base_convert.hpp  format_error.hpp  format_helper.hpp  format_int_conv.hpp  format_node_insert.hpp  format_node_static.hpp  format_nodes.hpp  format_optimize.hpp  format_options.hpp  format_parse.hpp  format_string.hpp  format_value_convert.hpp  format_variable.hpp  main.cpp  meta_list.hpp  meta_string.hpp  meta_type_list.hpp  meta_value_list.hpp
the_os/libformat/outl/: CMakeCache.txt  Makefile  cmake_install.cmake
the_os/libhardware/: CMakeLists.txt  assembly.hpp  atwenty.cpp  console.cpp  debug.hpp  hardware.cpp  kbdctrl.cpp  pic8259.cpp  print.cpp  print.hpp  rtccmos.cpp  utilities.hpp  vga_text.cpp
the_os/libhardware/hardware/: atwenty.hpp  bios_data_area.hpp  console.hpp  pic8259.hpp  rtccmos.hpp  vga_text.hpp
the_os/libhardware/source/: CMakeLists.txt  atwenty.cpp  console.cpp  hardware.cpp  kbdctrl.cpp  pic8259.cpp  rtccmos.cpp  x86arch.cpp  x86bios.cpp  x86call16.cpp  x86call16_stack.cpp  x86gdt.cpp  x86real_addr.cpp
the_os/libmemory/: CMakeLists.txt  CMakeSettings.json
the_os/libmemory/source/: CMakeLists.txt  allocator.cpp  block_list.cpp
the_os/libmemory/tests/: CMakeLists.txt  block_list_print.cpp  expect.hpp  t000_allocator.cpp  t001_ranges_overlap.cpp  t002_align_range.cpp  t003_insert_range.cpp  t004_realloc.cpp  t005_realloc_stomp.cpp  t006_buffer.cpp
the_os/libmisc/: CMakeLists.txt
the_os/libmisc/misc/: debug.hpp  utilities_bits.hpp  utilities_int.hpp  utilities_mpl.hpp
the_os/libmisc/source/: misc.cpp
the_os/libtextio/: CMakeLists.txt
the_os/libtextio/source/: CMakeLists.txt  detail.hpp  simple.hpp  simple_fmt.hpp  textio.cpp
the_os/libtextio/tests/: CMakeLists.txt  expect.hpp  t000_basic_write.cpp  t000_simple_write.cpp  t001_basic_writeln.cpp  t001_simple_writeln.cpp  t002_basic_write_int.cpp  t002_basic_write_int32.cpp  t002_simple_integral.cpp  t003_simple_fmt_repeat.cpp  t004_simple_fmt_base.cpp  t005_simple_fmt_addr.cpp  t005_simple_fmt_address.cpp  t006_simple_tuple.cpp  t007_simple_random0.cpp  t008_simple_gmkb.cpp  t009_format_basic.cpp  t010_format_user_convert_value.cpp  t011_format_helpers_repeat.cpp  t012_format_options.cpp
the_os/libutils/source/: CMakeLists.txt  utils.cpp
the_os/netboot/: CMakeLists.txt
the_os/netboot/source/: CMakeLists.txt  atwenty.c  biosacpi.s  desctab.c  epilogue.s  error.c  flatreal.s  irqctrl.c  irqstubs.s  kbdctrl.c  longdiv.s  memory.c  netmain.c  print.c  prologue.s  rtccmos.c  serial.c  smallcode.c  timer.c  wlink.wl
the_os/netboot32/: CMakeLists.txt  config.ini
tools/: CMakeLists.txt  CMakeSettings.json  build.bat  build.sh
tools/bootpd/: CMakeLists.txt  dhcp_options_v4.hpp  dhcp_packet_v4.cpp  dhcp_packet_v4.hpp  dhcp_server_v4.cpp  dhcp_server_v4.hpp  main.cpp  socket_api.cpp  socket_api.hpp  socket_error.hpp  socket_option.hpp  tftp_block_reader.cpp  tftp_block_reader.hpp  tftp_packet.cpp  tftp_packet.hpp  tftp_reader.cpp  tftp_reader.hpp  tftp_server_v4.cpp  tftp_server_v4.hpp  tftp_session_v4.cpp  tftp_session_v4.hpp  udp_socket.cpp  udp_socket.hpp  v4_address.cpp  v4_address.hpp  v4_dhcp_consts.hpp  v4_dhcp_listener.cpp  v4_dhcp_listener.hpp  v4_dhcp_options.hpp  v4_dhcp_packet.cpp  v4_dhcp_packet.hpp  v4_dhcp_server.cpp  v4_dhcp_server.hpp  v4_tftp_consts.hpp  v4_tftp_packet.cpp  v4_tftp_packet.hpp  v4_tftp_server.cpp  v4_tftp_server.hpp  v4_tftp_session.cpp  v4_tftp_session.hpp
tools/bootserver/: CMakeLists.txt  client_main.cpp  cobs_decoder.hpp  cobs_encoder.hpp  command_line.hpp  error.hpp  main.cpp  packet_buffer.cpp  packet_buffer.hpp  packet_io.cpp  packet_io.hpp  packet_io_pipe.cpp  packet_io_pipe.hpp  packet_io_serial.hpp  packet_io_win32.cpp  packet_io_win32.hpp  server_main.cpp
tools/calculator/: CMakeLists.txt  main.cpp
tools/common/: CMakeLists.txt  address_v4.cpp  address_v4.hpp  arguments.hpp  byte_order.hpp  case.hpp  concurrent_queue.hpp  config_ini.cpp  config_ini.hpp  control_c.cpp  control_c.hpp  crc32.cpp  crc32.hpp  file_utility.hpp  generic_error.hpp  lexical_cast.hpp  logger.cpp  logger.hpp  mac_address.hpp  serdes.hpp  socket_api.cpp  socket_api.hpp  socket_error.hpp  socket_udp.cpp  socket_udp.hpp  span_utility.hpp  trim.hpp  udp_socket.cpp  udp_socket.hpp  utility_cxhash.hpp  utility_file.hpp  v4_address.cpp  v4_address.hpp
tools/serbootd/: CMakeLists.txt  command_line.cpp  packet_buffer.cpp  packet_io_serial.cpp  packet_io_serial.hpp  packet_io_win32.cpp  packet_io_win32.hpp
tools/tftpd/: CMakeLists.txt  byteorder.hpp  main.cpp  socket_api.cpp  socket_api.hpp  socket_option.cpp  socket_option.hpp  udp_socket.cpp  udp_socket.hpp  v4_address.cpp  v4_address.hpp  v4_dhcp.cpp  v4_dhcp.hpp  v4_dhcp_base.hpp  v4_dhcp_options.hpp  v4_dhcp_opts.hpp  v4_dhcp_packet.cpp  v4_dhcp_packet.hpp
tools/workspace/: config.ini
(+412 files in other folders)
