cmake_minimum_required(VERSION 3.18)
project(tools)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(common)
add_subdirectory(calculator)
add_subdirectory(bootserver)
add_subdirectory(tftpd)
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/bin)
install(TARGETS calculator bootserver tftpd DESTINATION ${CMAKE_INSTALL_PREFIX})
