set(BOOTSTRAP_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/bootstrap.asm)
set(BOOTSTRAP_BINARY ${CMAKE_CURRENT_BINARY_DIR}/bootstrap.bin)
string(TIMESTAMP G_BUILD_TIMESTAMP "'%Y-%m-%d',32,'%H:%M'")
set(BOOTSTRAP_DEFINE -d G_BUILD_TIMESTAMP="${G_BUILD_TIMESTAMP}")


find_program(FASM fasm)

add_custom_command(OUTPUT ${BOOTSTRAP_BINARY}
  BYPRODUCTS ${BOOTSTRAP_BINARY}
  COMMAND ${FASM} ${BOOTSTRAP_DEFINE} ${BOOTSTRAP_SOURCE} ${BOOTSTRAP_BINARY} 
  DEPENDS ${BOOTSTRAP_SOURCE}
  MAIN_DEPENDENCY  ${BOOTSTRAP_SOURCE}
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
  COMMENT "Compiling bootstrap.bin"
)  

add_custom_target(bootstrap_bin ALL DEPENDS ${BOOTSTRAP_BINARY} SOURCES ${BOOTSTRAP_SOURCE})

set_property(SOURCE bootstrap.s PROPERTY OBJECT_DEPENDS ${BOOTSTRAP_BINARY})
set_property(SOURCE bootstrap.s PROPERTY COMPILE_DEFINITIONS "BOOTSTRAP_BINARY=\"${BOOTSTRAP_BINARY}\"")

add_library(bootstrap bootstrap.s)

add_dependencies(bootstrap bootstrap_bin)